--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,9 @@ header {
 /* certifications */
 .certification {
   background-color: #ffe66d;
+  /* background-image: url('https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixid=MXwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MTl8MTIyNTA3MHx8ZW58MHx8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80');
+  background-repeat: no-repeat;
+  background-size: cover; */
 }
 
 .row {
@@ -291,21 +294,30 @@ header {
 
 /* footer */
 
-footer {
-  background-color: black;
+#contact {
+  /* background-color: #8F8389; */
+  background: hsla(0, 0%, 0%, 1);
+
+background: linear-gradient(90deg, hsla(0, 0%, 0%, 1) 0%, hsla(330, 5%, 54%, 1) 9%);
+
+background: -moz-linear-gradient(90deg, hsla(0, 0%, 0%, 1) 0%, hsla(330, 5%, 54%, 1) 9%);
+
+background: -webkit-linear-gradient(90deg, hsla(0, 0%, 0%, 1) 0%, hsla(330, 5%, 54%, 1) 9%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#000000", endColorstr="#8F8389", GradientType=1 );
   color: white;
 }
 
 .fa {
   padding: 5px;
-  color: orange;
+  color: #0A37B3;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
 }
 
 .fa:hover {
-  color: orange;
+  color: black;
   opacity: 0.7;
 }
 
@@ -321,6 +333,7 @@ footer {
 .fa-instagram {
   color: white;
 }
+
 
 .box-wrapper {
   height: 40vh;
@@ -345,7 +358,10 @@ footer {
 }
 
 .material-icons {
-  color: orange;
+  /* color: #F05581; */
+}
+.material-icons:hover {
+  color: black;
 }
 
 #box > #box1,
@@ -410,4 +426,17 @@ footer {
     display: flex;
     flex-direction: column;
   }
+}
+
+
+/* footer */
+footer .visitor-count{
+  text-align:center;
+  padding:30px;
+  background-color: black;
+  color: white;
+}
+
+.visitor-count{
+  font-size:16px;
 }
