--- a/css/styles.css
+++ b/css/styles.css
@@ -79,28 +79,25 @@ li a:hover {
   } */
 
 @media screen and (max-width: 600px) {
-    .navbar {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        padding-right: 5px;
-        overflow: hidden;
-        background-color: #2f3061;
-        top: 0;
-      }
-      li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 12px 14px;
-        font-size: 13px;
-        text-decoration: none;
-        font-weight: 300;
-      }
-
- }
-
-
+  .navbar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    padding-right: 5px;
+    overflow: hidden;
+    background-color: #2f3061;
+    top: 0;
+  }
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 12px 14px;
+    font-size: 13px;
+    text-decoration: none;
+    font-weight: 300;
+  }
+}
 
 /* Home   */
 header {
@@ -129,6 +126,10 @@ header {
   overflow: hidden;
 }
 
+.about-me h2 {
+  text-align: center;
+}
+
 .about-me img {
   width: 250px;
   height: 250px;
@@ -143,18 +144,18 @@ header {
 }
 
 @media screen and (max-width: 600px) {
-    .about-me h2 {
-        /* float: left; */
-        font-size: 30px;
-        text-align: center;
-      }
+  .about-me h2 {
+    /* float: left; */
+    font-size: 30px;
+    text-align: center;
+  }
 
-      .about-me p {
-        float: left;
-        font-size: 16px;
-        /* margin: 30px; */
-      }
-      
+  .about-me p {
+    float: left;
+    font-size: 16px;
+    /* margin: 30px; */
+  }
+
   .about-me img {
     width: 150px;
     height: 150px;
@@ -169,19 +170,48 @@ header {
   background: #a1c6d7;
 }
 
+.skills h2 {
+  text-align: center;
+}
+
 .skill-item p {
   font-size: 18px;
-  font-weight: 200;
+  font-weight: 2;
+  color: black;
+  text-align: center;
 }
 
 .container {
   background-color: lightgrey;
   width: 80%;
+  height: 20px;
   border-radius: 15px;
+  margin-bottom: 50px;
 }
 
 .skill {
-  background-color: rgb(116, 194, 92);
+  /* background-color: rgb(116, 194, 92); */
+  background: hsla(221, 45%, 73%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(221, 45%, 73%, 1) 0%,
+    hsla(220, 78%, 29%, 1) 93%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(221, 45%, 73%, 1) 0%,
+    hsla(220, 78%, 29%, 1) 93%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(221, 45%, 73%, 1) 0%,
+    hsla(220, 78%, 29%, 1) 93%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#9bafd9", endColorstr="#103783", GradientType=1 );
   color: white;
   padding: 0.01%;
   text-align: right;
@@ -192,81 +222,168 @@ header {
 .html,
 .android,
 .java {
+  text-align: center;
+  padding-left: 20px;
+  font-weight: 400;
   width: 80%;
 }
 
 .python {
+  text-align: center;
+  font-weight: 400;
   width: 70%;
 }
 
 .mysql {
+  text-align: center;
+  font-weight: 400;
   width: 60%;
 }
 
 @media screen and (max-width: 600px) {
-    .skills h2 {
-        /* float: left; */
-        font-size: 30px;
-        text-align: center;
-      }
+  .skills h2 {
+    /* float: left; */
+    font-size: 30px;
+    text-align: center;
+  }
 
-    .skill-item p{
-        font-size: 16px;
-    }
+  .skill-item p {
+    font-size: 16px;
+  }
 }
-
 
 /* certifications */
 .certification {
   background-color: #ffe66d;
-  /* background-image: url('https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixid=MXwxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MTl8MTIyNTA3MHx8ZW58MHx8fA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80');
-  background-repeat: no-repeat;
-  background-size: cover; */
 }
 
-.row {
-  margin: 8px -16px;
+.certification h2 {
+  text-align: center;
 }
 
-/* Add padding BETWEEN each column */
-.row,
-.row > .column {
+.certification input[type="radio"] {
+  display: none;
+}
+
+.certification input[type="radio"]:checked + section {
+  display: block;
+}
+
+.certification .container {
+  position: relative;
+  /* left: 50%; */
+  /* margin-left: -100px; */
+  align-self: center;
+  /* margin: 10px; */
+  width: 800px;
+  height: 320px;
+
+  box-shadow: 10px 40px grey;
+}
+
+.certification .container section {
+  display: none;
+  height: 100%;
+  padding: 15px;
+  /* background: #449df5; */
+  color: #fff;
+  text-align: center;
+  background: #413f3c;
+}
+
+.certification .container section h1 {
+  margin-bottom: 0;
+  font-family: "Nunito", sans-serif;
+  font-weight: lighter;
+  font-size: 2em;
+}
+
+.certification .container section img {
+  width: 200px;
+  height: 120px;
+}
+
+.certification .container section p {
+  width: 75%;
+  margin: 0 auto;
   padding: 10px;
 }
 
-/* Create four equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 22%;
+.certification .container section label {
+  position: absolute;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 1.5em;
+  bottom: 0;
 }
 
-/* Clear floats after rows */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.certification .container section label:nth-child(odd) {
+  right: 120px;
 }
 
-/* Content */
-.content {
-  background-color: white;
-  padding: 10px;
+.certification .container section label:nth-child(even) {
+  left: 120px;
+}
+
+.certification .container section > i {
+  font-size: 7em !important;
+  margin-top: 60px;
+  margin-bottom: 25px;
 }
 
 @media screen and (max-width: 900px) {
-  .column {
-    width: 50%;
+  .certification .container {
+    position: relative;
+    /* left: 50%; */
+    /* margin-left: -100px; */
+    align-self: center;
+    margin: 10px;
+    width: 800px;
+    height: 320px;
   }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-   .certification h2{
-       font-size: 30px;
-       text-align: center;
-   } 
-  .column {
-    width: 100%;
+  .certification h2 {
+    font-size: 30px;
+    text-align: center;
+  }
+  .certification .container {
+    position: relative;
+    /* left: 50%; */
+    /* margin-left: -100px; */
+    align-self: center;
+    margin: 10px;
+    width: 400px;
+    height: 340px;
+  }
+
+  .certification .container section img {
+    width: 140px;
+    height: 90px;
+  }
+
+  .certification .container section h1 {
+    margin-bottom: 0;
+    font-family: "Nunito", sans-serif;
+    font-weight: lighter;
+    font-size: 18px;
+  }
+
+  .certification .container section p {
+    width: 75%;
+    margin: 0 auto;
+    padding: 10px;
+    font-size: 13px;
+  }
+
+  .certification .container section label {
+    position: absolute;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 1em;
+    bottom: 0;
   }
 }
 
@@ -298,19 +415,35 @@ header {
   /* background-color: #8F8389; */
   background: hsla(0, 0%, 0%, 1);
 
-background: linear-gradient(90deg, hsla(0, 0%, 0%, 1) 0%, hsla(330, 5%, 54%, 1) 9%);
+  background: linear-gradient(
+    90deg,
+    hsla(0, 0%, 0%, 1) 0%,
+    hsla(330, 5%, 54%, 1) 9%
+  );
 
-background: -moz-linear-gradient(90deg, hsla(0, 0%, 0%, 1) 0%, hsla(330, 5%, 54%, 1) 9%);
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(0, 0%, 0%, 1) 0%,
+    hsla(330, 5%, 54%, 1) 9%
+  );
 
-background: -webkit-linear-gradient(90deg, hsla(0, 0%, 0%, 1) 0%, hsla(330, 5%, 54%, 1) 9%);
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(0, 0%, 0%, 1) 0%,
+    hsla(330, 5%, 54%, 1) 9%
+  );
 
-filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#000000", endColorstr="#8F8389", GradientType=1 );
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#000000", endColorstr="#8F8389", GradientType=1 );
   color: white;
+}
+
+#contact h2 {
+  text-align: center;
 }
 
 .fa {
   padding: 5px;
-  color: #0A37B3;
+  color: #0a37b3;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
@@ -333,7 +466,6 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#000000", en
 .fa-instagram {
   color: white;
 }
-
 
 .box-wrapper {
   height: 40vh;
@@ -377,20 +509,20 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#000000", en
 }
 
 @media screen and (max-width: 900px) {
-    .fa-linkedin {
-        margin-left: 250px;
-        color: white;
-      }
-    
-      #box3 > .material-icons{
-        margin-right: 10px;
-      }
+  .fa-linkedin {
+    margin-left: 250px;
+    color: white;
   }
+
+  #box3 > .material-icons {
+    margin-right: 10px;
+  }
+}
 @media screen and (max-width: 600px) {
-    #contact h2{
-        font-size: 30px;
-        text-align: center;
-    }
+  #contact h2 {
+    font-size: 30px;
+    text-align: center;
+  }
 
   .fa {
     padding: 2px;
@@ -428,15 +560,14 @@ filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#000000", en
   }
 }
 
-
 /* footer */
-footer .visitor-count{
-  text-align:center;
-  padding:30px;
+footer .visitor-count {
+  text-align: center;
+  padding: 30px;
   background-color: black;
   color: white;
 }
 
-.visitor-count{
-  font-size:16px;
+.visitor-count {
+  font-size: 16px;
 }
